--- a/redirect/Scuola/TPSI/Tris/index.html
+++ b/redirect/Scuola/TPSI/Tris/index.html
@@ -70,6 +70,7 @@
                 <h2>Difficulty</h2>
                 <button class="difficulty-selector">Easy</button>
                 <button class="close-window">Close</button>
+                <span id="coming-soon">Coming Soon...</span>
             </div>
             <table class="table">
                 <tr row=0>
