--- a/redirect/Scuola/TPSI/Tris/index.html
+++ b/redirect/Scuola/TPSI/Tris/index.html
@@ -9,7 +9,7 @@
     <title>Tic Tac Toe</title>
 </head>
 <body> 
-    <div class="width-414">
+    <div class="width-414" id="width-414">
         <div class="settings">
             <div class="gear icon" onclick="showHideSettings()"></div>
         </div> 
@@ -42,7 +42,7 @@
             <div class="title"></div>
             <div class="buttons">
                 <button onclick="openMultiplayer()">Player vs Player</button>
-                <button onclick="openSp()">Play with bot</button>
+                <button onclick="openSinglePlayer()">Play with bot</button>
             </div>    
         </div>
         <div class="game" id="game">
@@ -77,5 +77,6 @@
         </div>  
     </div>    
     <script src="./static/js/js.js"></script>
+    <script src="./static/js/backgroundAnimation.js"></script>
 </body>
 </html>
