--- a/redirect/Scuola/TPSI/Tris/index.html
+++ b/redirect/Scuola/TPSI/Tris/index.html
@@ -9,7 +9,7 @@
     <title>Tic Tac Toe</title>
 </head>
 <body> 
-    <div class="width-414" id="width-414">
+    <div class="width-414 background-rotation" id="width-414">
         <div class="settings">
             <div class="gear icon" onclick="showHideSettings()"></div>
         </div> 
