--- a/redirect/Scuola/TPSI/Tris/index.html
+++ b/redirect/Scuola/TPSI/Tris/index.html
@@ -9,6 +9,7 @@
     <title>Tic Tac Toe</title>
 </head>
 <body> 
+    <div class="blur"></div> 
     <div class="width-414 background-rotation" id="width-414">
         <div class="settings">
             <div class="gear icon" onclick="showHideSettings()"></div>
@@ -75,8 +76,7 @@
                 <span id="coming-soon">Coming Soon...</span>
             </div>            
         </div>  
-    </div>    
+    </div>       
     <script src="./static/js/js.js"></script>
-    <script src="./static/js/backgroundAnimation.js"></script>
 </body>
 </html>
