removed white borders from blurred background image

--- a/redirect/Scuola/TPSI/Tris/index.html
+++ b/redirect/Scuola/TPSI/Tris/index.html
@@ -10,7 +10,7 @@
 </head>
 <body> 
     <div class="blur"></div> 
-    <div class="width-414 background-rotation" id="width-414">
+    <div class="width-414 " id="width-414">
         <div class="settings">
             <div class="gear icon" onclick="showHideSettings()"></div>
         </div> 
