end theme added

--- a/redirect/Scuola/TPSI/Tris/index.html
+++ b/redirect/Scuola/TPSI/Tris/index.html
@@ -34,6 +34,10 @@
                         <div>Nether</div>
                         <div class="theme-icon nether-icon"></div>
                     </div>
+                    <div class="end">
+                        <div>End</div>
+                        <div class="theme-icon end-icon"></div>
+                    </div>
                 </div>
                 <div class="social">
                     <div class="github social-icon" onclick="window.open('https://github.com/IlGabbo')"></div>
