fixed theme.js not found

--- a/redirect/Scuola/TPSI/Tris/index.html
+++ b/redirect/Scuola/TPSI/Tris/index.html
@@ -92,6 +92,6 @@
         </div>  
     </div>       
     <script src="./static/js/js.js"></script>    
-    <script src="./Static/js/theme.js"></script>
+    <script src="./static/js/theme.js"></script>
 </body>
 </html>
