--- a/redirect/Scuola/TPSI/Tris/index.html
+++ b/redirect/Scuola/TPSI/Tris/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./static/css/tris.css">
+    <link rel="preload" href="./static/js/theme.js">    
     <link rel="shortcut icon" id="favicon" href="static/images/favicon/minecraft.ico" type="image/x-icon">
     <title>Tic Tac Toe</title>
 </head>
