--- a/redirect/Scuola/TPSI/Compito17Dicembre/10print.html
+++ b/redirect/Scuola/TPSI/Compito17Dicembre/10print.html
@@ -11,7 +11,7 @@
         Dimensione linea
         <input type="range" name="range-input" id="range-input" min="1" max="100" value="10">
     </label>
-    <script src="./static/js/Libs/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
     <script src="./static/js/Scripts/10print.js"></script>
 </body>
 </html>
