--- a/redirect/Scuola/TPSI/Compito17Dicembre/pattern_casuale.html
+++ b/redirect/Scuola/TPSI/Compito17Dicembre/pattern_casuale.html
@@ -11,7 +11,7 @@
         Dimensione quadrato
         <input type="range" name="range" id="range" value="30">
     </label>
-    <script src="./static/js/Libs/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
     <script src="./static/js/Scripts/pattern_casuale.js"></script>
 </body> 
 </html>
