--- a/redirect/Scuola/TPSI/Compito17Dicembre/truchet_tiles.html
+++ b/redirect/Scuola/TPSI/Compito17Dicembre/truchet_tiles.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./static/js/Libs/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
     <script src="./static/js/Scripts/truchet_tiles.js"></script>
 </body>
 </html>
