--- a/redirect/Scuola/TPSI/Moto Uniformemente Accelerato/index.html
+++ b/redirect/Scuola/TPSI/Moto Uniformemente Accelerato/index.html
@@ -31,7 +31,7 @@
 			</div>
 		</form>
 
-		<script src="./static/js/Libs/p5.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
 		<script src="./static/js/js.js"></script>
 	</body>
 </html>
