--- a/redirect/Scuola/TPSI/RandomCircles/index.html
+++ b/redirect/Scuola/TPSI/RandomCircles/index.html
@@ -7,7 +7,7 @@
     <title>Giglo</title>
 </head>
 <body>
-    <script src="static/js/Libs/p5js/p5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
     <script src="static/js/js.js"></script>
 </body>
 </html>
