--- a/redirect/Scuola/TPSI/Sinusoide/index.html
+++ b/redirect/Scuola/TPSI/Sinusoide/index.html
@@ -29,7 +29,7 @@
             <p style="text-align: center;" id="valore-base"></p>
         </div>
     </div>
-    <script src="./static/js/Libs/p5js/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
     <script src="./static/js/js.js"></script>
 </body>
 </html>
