multiplayer id obtainment system

--- a/redirect/Scuola/TPSI/Tris/index.html
+++ b/redirect/Scuola/TPSI/Tris/index.html
@@ -54,11 +54,19 @@
                 <button onclick="document.querySelector('#status').style.display = 'none'; resetGame('static/music/click.ogg')">Close</button>
             </div>
         </div>
+        <div class="share-link-cnt">
+            <div class="share-link">
+                <p>Share your link</p>
+                <button id="copyurl">Copy</button>
+            </div>            
+        </div>
+
         <div class="container">        
             <div class="title"></div>
             <div class="buttons">
                 <button onclick="openMultiplayer()">Player vs Player</button>
                 <button onclick="openSinglePlayer()">Play with bot</button>
+                <button onclick="onlineMp()">Online Mp</button>
             </div>    
         </div>
         <div class="game" id="game">
