--- a/tpsit/php-func/index.html
+++ b/tpsit/php-func/index.html
@@ -6,6 +6,16 @@
   <title>Document</title>
 </head>
 <body>
-  <a href="monete/">Monete</a>
+  <ul>
+    <li>
+      <a href="monete/">Monete</a>
+    </li>
+    <li>
+      <a href="controllo_login/">Controllo Login</a>
+    </li>
+    <li>
+      <a href="equazione/">Equazione</a>
+    </li>
+  </ul>
 </body>
 </html>
